[package]
name = "doca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Here're the samples
[[example]]
name = "local_dma_copy"
path = "examples/dma/local_copy_on_dpu.rs"

[[example]]
name = "dma_copy_host"
path = "examples/dma/dma_copy_host.rs"

[[example]]
name = "dma_copy_dpu"
path = "examples/dma/dma_copy_dpu.rs"

[dependencies]
ffi = { path = "../doca-sys", package = "doca-sys", version = "0.1.0" }
page_size = "0.5.0"
clap = "3.2.19"
ctrlc = "3.2.3"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"